--- a/static/output.css
+++ b/static/output.css
@@ -714,6 +714,10 @@ video {
   flex-direction: column;
 }
 
+.place-items-center{
+  place-items: center;
+}
+
 .items-center{
   align-items: center;
 }
