--- a/static/output.css
+++ b/static/output.css
@@ -587,10 +587,6 @@ video {
   margin-right: 4rem;
 }
 
-.-mt-16{
-  margin-top: -4rem;
-}
-
 .flex{
   display: flex;
 }
@@ -615,8 +611,8 @@ video {
   height: 10rem;
 }
 
-.h-full{
-  height: 100%;
+.h-auto{
+  height: auto;
 }
 
 .h-fit{
@@ -624,8 +620,8 @@ video {
   height: fit-content;
 }
 
-.h-auto{
-  height: auto;
+.h-full{
+  height: 100%;
 }
 
 .min-h-screen{
@@ -648,21 +644,17 @@ video {
   width: 24rem;
 }
 
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full{
   width: 100%;
 }
 
 .w-screen{
   width: 100vw;
-}
-
-.w-auto{
-  width: auto;
-}
-
-.w-fit{
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .-translate-x-1\/2{
@@ -702,12 +694,12 @@ video {
   grid-auto-columns: auto;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -742,17 +734,8 @@ video {
   justify-content: space-around;
 }
 
-.gap-4{
-  gap: 1rem;
-}
-
 .gap-8{
   gap: 2rem;
-}
-
-.gap-x-8{
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
@@ -773,34 +756,12 @@ video {
   margin-bottom: calc(4rem * var(--tw-space-y-reverse));
 }
 
-.space-x-16 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(4rem * var(--tw-space-x-reverse));
-  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-0 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0px * var(--tw-space-y-reverse));
-}
-
-.-space-y-16 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(-4rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(-4rem * var(--tw-space-y-reverse));
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
 
 .whitespace-nowrap{
   white-space: nowrap;
-}
-
-.rounded{
-  border-radius: 0.25rem;
 }
 
 .rounded-xl{
@@ -1032,6 +993,10 @@ video {
   .sm\:w-1\/3{
     width: 33.333333%;
   }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 768px){
@@ -1041,6 +1006,14 @@ video {
 
   .md\:flex{
     display: flex;
+  }
+
+  .md\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
@@ -1055,6 +1028,10 @@ video {
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:justify-start{
@@ -1079,6 +1056,10 @@ video {
 
   .xl\:w-5\/6{
     width: 83.333333%;
+  }
+
+  .xl\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .xl\:border-4{
